feature: scheduler exponential, statistics calculation, flyway